Remove the December 2025 LTO de-inlining stopgap now that WTF::opaque() is volatile

b2beff661bf3 ("Temp: attempt to fix", Dec 2025) was a stopgap while chasing a
FinalizationRegistry miscompile on Alpine Linux LTO builds. It demoted
ALWAYS_INLINE to plain inline and ALWAYS_INLINE_LAMBDA to nothing across the
whole tree, moved Heap::isMarked, MarkedBlock::isMarked, and
MarkedBlock::Handle::isLive out of line as NEVER_INLINE, marked
Dependency::fence/loadAndFence and JSFinalizationRegistry::finalizeUnconditionally
NEVER_INLINE, and swapped the x86_64 compiler fences for std::atomic_thread_fence.

The actual root cause was found upstream: 302941@main made the inline asm in
WTF::opaque() non-volatile, so the optimizer could elide or relocate it,
breaking the Dependency-based fenceless reads in the GC's liveness checks.
Upstream fixed it in 308243@main (webkit.org/b/308660, "inline asm in
WTF::opaque() needs to be volatile"), which this tree has carried since
February.

This restores upstream parity at our merge base (3722912ff800): ALWAYS_INLINE
and ALWAYS_INLINE_LAMBDA are enforced again in release builds, the GC liveness
checks are back in their inline headers (upstream measured ~2% on splay from
isLive's inlining alone), and the fence definitions match upstream.